--- a/design.css
+++ b/design.css
@@ -17,6 +17,7 @@ body{
   font-family: sans-serif;
   text-align:center;
   font-size: 20px;
+  transition:0.4s ease;
 }
 
 a{
@@ -37,6 +38,7 @@ a:hover{
 }
 .hd span{
   border-bottom:5px solid white;
+  color:white;
 }
 
 /* title */
