--- a/design.css
+++ b/design.css
@@ -10,14 +10,16 @@
   --c_text_hover:#adb5bd;
 
 }
-
+*{
+  transition:0.4s ease;
+}
 body{
   background-color: var(--c_blue_dark);
   padding-top: 0em;
   font-family: sans-serif;
   text-align:center;
   font-size: 20px;
-  transition:0.4s ease;
+/*   transition:0.4s ease; */
   overflow-x:hidden;
 }
 
