--- a/design.css
+++ b/design.css
@@ -138,7 +138,7 @@ a:hover{
 
 /*some size manipulations*/
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   .hd{
     font-size: 7rem;
   }
