--- a/design.css
+++ b/design.css
@@ -10,17 +10,14 @@
   --c_text_hover:#adb5bd;
 
 }
-*{
-  transition:0.4s ease;
-}
+
 body{
   background-color: var(--c_blue_dark);
   padding-top: 0em;
   font-family: sans-serif;
   text-align:center;
   font-size: 20px;
-/*   transition:0.4s ease; */
-  overflow-x:hidden;
+  transition:0.4s ease;
 }
 
 a{
@@ -138,7 +135,7 @@ a:hover{
 
 /*some size manipulations*/
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .hd{
     font-size: 7rem;
   }
@@ -150,14 +147,4 @@ a:hover{
 /*some hovering effects*/
 .weekd:hover, .data1:hover{
   background-color:#29711a;
-}
-@media screen and(max-width: 300px)
-  {
-    body{
-      min-width: 300px;
-      overflow-x:auto;
-    }
-    .hd{
-      font-size: 5rem;
-    }
 }
